[geogram] update to 1.3-b

--- a/src/bin/vorpaview/CMakeLists.txt
+++ b/src/bin/vorpaview/CMakeLists.txt
@@ -2,5 +2,5 @@ include(${CMAKE_SOURCE_DIR}/cmake/opengl.cmake)
 
 aux_source_directories(SOURCES "" .)
 add_executable(vorpaview ${SOURCES})
-target_link_libraries(vorpaview geogram geogram_gfx ${GLFW_LIBRARIES})
+target_link_libraries(vorpaview geogram_gfx geogram ${GLFW_LIBRARIES})
 install_runtime_targets(vorpaview)
