--- a/imgui.ini
+++ b/imgui.ini
@@ -5,21 +5,26 @@ Collapsed=0
 
 [Object]
 Pos=660,20
-Size=140,780
+Size=140,545
 Collapsed=0
 
 [Viewer]
 Pos=0,20
-Size=140,390
+Size=140,272
 Collapsed=0
 
 [Console]
-Pos=0,952
-Size=1920,199
+Pos=0,566
+Size=800,199
 Collapsed=0
 
 [Command]
-Pos=0,411
-Size=140,389
+Pos=0,294
+Size=140,270
+Collapsed=0
+
+[##Status]
+Pos=0,766
+Size=800,34
 Collapsed=0
 
