--- a/src/test/test_GLUP/CMakeLists.txt
+++ b/src/test/test_GLUP/CMakeLists.txt
@@ -1,4 +1,4 @@
-include(${CMAKE_SOURCE_DIR}/cmake/opengl.cmake)
+include(${PROJECT_SOURCE_DIR}/cmake/opengl.cmake)
 
 aux_source_directories(SOURCES "" .)
 add_executable(test_GLUP ${SOURCES})
