[geogram] update to 1.3.11

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,7 +4,6 @@ add_subdirectory(test_convex_cell)
 add_subdirectory(test_opennl)
 add_subdirectory(bench_load)
 add_subdirectory(test_locks)
-add_subdirectory(compute_OTM)
 add_subdirectory(compute_delaunay)
 add_subdirectory(test_expansion_nt)
 add_subdirectory(test_HLBFGS)
@@ -19,4 +18,9 @@ add_subdirectory(test_RVC)
 
 if(GEOGRAM_WITH_GRAPHICS)
    add_subdirectory(test_GLUP)
+endif()
+
+if(GEOGRAM_WITH_EXPLORAGRAM)
+   add_subdirectory(hexdom_pipeline)
+   add_subdirectory(compute_OTM)   
 endif()
