--- a/src/test/compute_OTM/CMakeLists.txt
+++ b/src/test/compute_OTM/CMakeLists.txt
@@ -3,7 +3,7 @@ vor_add_executable(compute_OTM ${SOURCES})
 
 if(GEOGRAM_WITH_VORPALINE)
   add_definitions(-DGEOGRAM_WITH_VORPALINE)
-  target_link_libraries(compute_OTM geogram vorpalib)
+  target_link_libraries(compute_OTM exploragram geogram vorpalib)
 else()
-  target_link_libraries(compute_OTM geogram)
+  target_link_libraries(compute_OTM exploragram geogram)
 endif()
