[geogram] update to 1.3.14

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -4,6 +4,10 @@
 
 include(${PROJECT_SOURCE_DIR}/cmake/doxygen.cmake)
 
+cmake_minimum_required(VERSION 2.8)
+
+
+
 if(DOXYGEN_FOUND)
 
   # Add a custom documentation targets
