--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,15 @@ if(NOT DEFINED GEOGRAM_WITH_GRAPHICS)
     set(GEOGRAM_WITH_GRAPHICS TRUE)
 endif()    
 
+if(NOT DEFINED GEOGRAM_WITH_LEGACY_NUMERICS)
+    set(GEOGRAM_WITH_LEGACY_NUMERICS TRUE)
+endif()
+
 include(cmake/geogram.cmake)
 
 set(VORPALINE_VERSION_MAJOR 1)
 set(VORPALINE_VERSION_MINOR 3)
-set(VORPALINE_VERSION_PATCH 15)
+set(VORPALINE_VERSION_PATCH 16)
 set(VORPALINE_VERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH})
 
 set(VORPALINE_INCLUDE_SUBPATH geogram${VORPALINE_VERSION_MAJOR})
