--- a/src/lib/geogram/CMakeLists.txt
+++ b/src/lib/geogram/CMakeLists.txt
@@ -17,6 +17,7 @@ aux_source_directories(SOURCES "Source Files\\voronoi"   voronoi)
 aux_source_directories(SOURCES "Source Files\\points"    points)
 aux_source_directories(SOURCES "Source Files\\api"       api)
 aux_source_directories(SOURCES "Source Files\\NL"        NL)
+aux_source_directories(SOURCES "Source Files\\parameterization" parameterization)
 
 if(GEOGRAM_WITH_TETGEN)
    add_definitions(-DGEOGRAM_WITH_TETGEN)
