[geogram] Update to 1.4.3

--- a/src/lib/exploragram/CMakeLists.txt
+++ b/src/lib/exploragram/CMakeLists.txt
@@ -10,7 +10,8 @@ add_library(exploragram ${SOURCES})
 
 set_target_properties(exploragram PROPERTIES
                       VERSION ${VORPALINE_VERSION}
-                      SOVERSION ${VORPALINE_VERSION_MAJOR})
+                      SOVERSION ${VORPALINE_VERSION_MAJOR}
+		      FOLDER "GEOGRAM")
 
 if(UNIX AND VORPALINE_BUILD_DYNAMIC)
     target_link_libraries(exploragram pthread dl)
@@ -25,4 +26,8 @@ if(GEOGRAM_WITH_VORPALINE)
 endif()
 
 target_link_libraries(exploragram geogram)
+
+set_target_properties(
+   exploragram PROPERTIES
+   FOLDER "GEOGRAM")
 
