--- a/tools/runpybot.bat.in
+++ b/tools/runpybot.bat.in
@@ -1,6 +1,10 @@
 :: Wrapper for the RobotFramework test runner
 @echo off
 
+set PATH=%PATH%;C:\Python27;C:\Python27\Scripts
+
+echo PATH=%PATH%
+
 :: Keep environment changes local
 setlocal ENABLEEXTENSIONS
 
