--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -6,7 +6,9 @@ add_subdirectory(geodump)
 if(GEOGRAM_WITH_GRAPHICS)
   add_subdirectory(vorpaview)
   add_subdirectory(geobox)
-  add_subdirectory(geocod)  
+  if(GEOGRAM_WITH_LUA)  
+     add_subdirectory(geocod)
+  endif()   
 endif()
 
 if(GEOGRAM_WITH_VORPALINE) 
