--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,211 +1,212 @@
-##############################################################################
-# Geogram/Vorpaline root CMakeList
-##############################################################################
+# geogram
 
-# CMake 2.8.11 is required for 2 reasons:
-# - it is the first version that fully supports the specification of Visual
-# Studio toolsets (v110_xp).
-# - it is the version that supports the command string(TIMESTAMP ...)
-cmake_minimum_required(VERSION 2.8.11)
-
-# Note: geogram.cmake defines GEOGRAM_WITH_VORPALINE
-# that we could have used instead,
-# but geogram.cmake needs to be included after the project() 
-# command, since project() resets CFLAGS and CXXFLAGS.
-
-if(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/src/lib/vorpalib)
-    project(Vorpaline)
-else()
-    project(Geogram)
-endif()
-
-# Optional modules
-# (can be overriden in CMakeOptions.txt)
-
-option(GEOGRAM_WITH_GRAPHICS "Viewers and geogram_gfx library" ON)
-option(GEOGRAM_WITH_LEGACY_NUMERICS "Legacy numerical libraries" ON)
-option(GEOGRAM_WITH_HLBFGS "Non-linear solver (Yang Liu's HLBFGS)" ON)
-option(GEOGRAM_WITH_TETGEN "Tetrahedral mesher (Hang Si's TetGen)" ON)
-option(GEOGRAM_WITH_TRIANGLE "Triangle mesher (Jonathan Shewchuk's triangle)" ON)
-option(GEOGRAM_WITH_EXPLORAGRAM "Experimental code (hexahedral meshing pipeline and optimal transport)" ON)
-option(GEOGRAM_WITH_LUA "Built-in LUA interpreter" ON)
-option(GEOGRAM_LIB_ONLY "Libraries only (no example programs/no viewer)" OFF)
-option(GEOGRAM_WITH_FPG "Predicate generator (Sylvain Pion's FPG)" OFF)
-option(GEOGRAM_USE_SYSTEM_GLFW3 "Use the version of GLFW3 installed in the system if found" OFF)
-
-set(VORPALINE_PLATFORM "" CACHE STRING "")
-
-include(cmake/geogram.cmake)
-
-set(VORPALINE_VERSION_MAJOR 1)
-set(VORPALINE_VERSION_MINOR 6)
-set(VORPALINE_VERSION_PATCH 3)
-set(VORPALINE_VERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH})
-
-set(VORPALINE_INCLUDE_SUBPATH geogram${VORPALINE_VERSION_MAJOR})
-
-# Determine the current Build-OS (Build-platform without the compiler info)
-string(REGEX REPLACE "-[^-]+$" "" VORPALINE_OS ${VORPALINE_PLATFORM})
-
-# Determine the current build date
-string(TIMESTAMP VORPALINE_BUILD_DATE "%Y-%m-%d %H:%M:%S")
-string(TIMESTAMP YEAR "%Y")
-
-# Determine the current build number
-# This is set by Jenkins in environment variable BUILD_NUMBER
-set(VORPALINE_BUILD_NUMBER $ENV{BUILD_NUMBER})
-
-
-##############################################################################
-# Get SVN revision info
-
-if(GEOGRAM_WITH_VORPALINE)
-   find_package(Subversion QUIET)
-   if(NOT SUBVERSION_FOUND)
-       message(WARNING "Subversion executable not found - cannot determine current revision")
-   else()
-       Subversion_WC_INFO(${PROJECT_SOURCE_DIR} Vorpaline)
-       message(STATUS "Vorpaline revision is ${Vorpaline_WC_REVISION}")
-       set(VORPALINE_SVN_REVISION ${Vorpaline_WC_REVISION})
-   endif()
-endif()   
-
-##############################################################################
-# RPATH (where executables find the .so / DLLs)
-# - Enables RPATH support for MACOSX
-# - Makes RPATH of dynamic libraries and executable point to the directory
-#   where libraries are installed.
-
-if(VORPALINE_BUILD_DYNAMIC)
-   set(CMAKE_MACOSX_RPATH 1)
-   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-endif()
-
-set(CMAKE_INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
-
-# uninstall target
-# Needs to be created before add_subdirectory() because GLFw has
-# also an uninstall target that will be inhibited if there is
-# already one (Geogram's one needs to be first)
-
-configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
-    IMMEDIATE @ONLY)
-
-add_custom_target(uninstall
-    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
-
-##############################################################################
-# Geogram/Vorpaline sources
-
-add_subdirectory(src/lib/geogram)
-if(GEOGRAM_WITH_VORPALINE)
-   add_subdirectory(src/lib/vorpalib)
-endif()
-
-add_subdirectory(src/lib/third_party)
-
-if(GEOGRAM_WITH_GRAPHICS)
-  add_subdirectory(src/lib/geogram_gfx)
-endif()
-
-if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/lib/exploragram)
-  if(GEOGRAM_WITH_EXPLORAGRAM)
-     add_subdirectory(src/lib/exploragram)
-  endif()
-endif()
-
-if(NOT GEOGRAM_LIB_ONLY)
-  add_subdirectory(src/bin)
-  add_subdirectory(src/tests)
-  add_subdirectory(src/examples)
-endif()
-
-add_subdirectory(doc)
-add_subdirectory(tests)
-
-##############################################################################
-# Cleanup from previous builds
-
-file(REMOVE ${CMAKE_BINARY_DIR}/doc/LICENSE.txt)
-
-
-##############################################################################
-# Geogram installation
-
-
-# FindGeogram.cmake
-
-install(FILES cmake/FindGeogram.cmake DESTINATION lib/cmake/modules COMPONENT devkit)
-
-# Configure CPack
-
-set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
-set(CPACK_SYSTEM_NAME ${VORPALINE_OS})
-set(CPACK_PACKAGE_VENDOR "INRIA - ALICE")
-
-
-if(${GEOGRAM_WITH_VORPALINE})
-    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A flexible mesh generator")
-else()
-    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "fast, simple and easy-to-use primitives for geometric programming")
-endif()
-
-set(CPACK_PACKAGE_VERSION_MAJOR ${VORPALINE_VERSION_MAJOR})
-set(CPACK_PACKAGE_VERSION_MINOR ${VORPALINE_VERSION_MINOR})
-set(CPACK_PACKAGE_VERSION_PATCH ${VORPALINE_VERSION_PATCH})
-set(CPACK_PACKAGE_VERSION ${VORPALINE_VERSION})
-set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION})
-set(CPACK_COMPONENT_INCLUDE_TOPLEVEL_DIRECTORY true)
-
-if(CPACK_GENERATOR STREQUAL "DEB")
-  set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-  set(CPACK_PACKAGE_CONTACT Bruno.Levy@inria.fr)
-# set(CPACK_PACKAGE_DEPENDS "libglfw3 (>= 3.2-1), libc6 (>= 2.22-11), libstdc++ (>= 6.1.1-4)")
-#   TODO: use objdump -p | grep NEEDED to automate...
-#   or GET_PROPERTY(result GLOBAL ENABLED_FEATURES)  (successful FIND_PACKAGE())
-endif()
-
-if(NOT DEFINED CPACK_GENERATOR) 
-  if(WIN32)
-    set(CPACK_GENERATOR ZIP)
-  else()
-    set(CPACK_GENERATOR TGZ)
-  endif()
-endif()
-
-# Enable component-based packaging for archive generators (TGZ, ZIP)
-set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
-
-set(CPACK_COMPONENTS_ALL runtime devkit devkit-full doc-devkit doc-devkit-full)
-set(CPACK_COMPONENTS_GROUPING "IGNORE")
-
-set(CPACK_COMPONENT_RUNTIME_DISPLAY_NAME "Vorpaline Application")
-set(CPACK_COMPONENT_RUNTIME_GROUP "Runtime")
-
-set(CPACK_COMPONENT_DEVKIT_DISPLAY_NAME "Vorpaline Developer Kit")
-set(CPACK_COMPONENT_DEVKIT_GROUP "Development")
-
-set(CPACK_COMPONENT_DEVKIT-FULL_DISPLAY_NAME "Vorpaline Full Developer Kit")
-set(CPACK_COMPONENT_DEVKIT-FULL_GROUP "Development")
-
-set(CPACK_COMPONENT_DOC-DEVKIT_DISPLAY_NAME "Vorpaline API Developer Kit Documentation")
-set(CPACK_COMPONENT_DOC-DEVKIT_GROUP "Documentation")
-
-set(CPACK_COMPONENT_DOC-DEVKIT-FULL_DISPLAY_NAME "Vorpaline Full Developer Kit Documentation")
-set(CPACK_COMPONENT_DOC-DEVKIT-FULL_GROUP "Documentation")
-
-set(CPACK_COMPONENT_DOC-DEVKIT-INTERNAL_DISPLAY_NAME "Vorpaline Internal Developer Kit Documentation")
-set(CPACK_COMPONENT_DOC-DEVKIT-INTERNAL_GROUP "Documentation")
-
-# Copy the helper script to build individual packages to the binary directory
-configure_file(
-    tools/make_package.pl.in
-    make_package.pl
-    @ONLY
+list(APPEND sources
+  "src/lib/geogram/basic/algorithm.cpp"
+  "src/lib/geogram/basic/algorithm.h"
+  "src/lib/geogram/basic/argused.h"
+  "src/lib/geogram/basic/assert.cpp"
+  "src/lib/geogram/basic/assert.h"
+  "src/lib/geogram/basic/atomics.h"
+  "src/lib/geogram/basic/attributes.cpp"
+  "src/lib/geogram/basic/attributes.h"
+  "src/lib/geogram/basic/b_stream.cpp"
+  "src/lib/geogram/basic/b_stream.h"
+  #"src/lib/geogram/basic/command_line.cpp"
+  #"src/lib/geogram/basic/command_line.h"
+  #"src/lib/geogram/basic/command_line_args.cpp"
+  #"src/lib/geogram/basic/command_line_args.h"
+  "src/lib/geogram/basic/common.cpp"
+  "src/lib/geogram/basic/common.h"
+  "src/lib/geogram/basic/counted.cpp"
+  "src/lib/geogram/basic/counted.h"
+  "src/lib/geogram/basic/environment.cpp"
+  "src/lib/geogram/basic/environment.h"
+  "src/lib/geogram/basic/factory.cpp"
+  "src/lib/geogram/basic/factory.h"
+  "src/lib/geogram/basic/file_system.cpp"
+  "src/lib/geogram/basic/file_system.h"
+  "src/lib/geogram/basic/geofile.cpp"
+  "src/lib/geogram/basic/geofile.h"
+  "src/lib/geogram/basic/geometry.cpp"
+  "src/lib/geogram/basic/geometry.h"
+  "src/lib/geogram/basic/geometry_nd.h"
+  "src/lib/geogram/basic/line_stream.cpp"
+  "src/lib/geogram/basic/line_stream.h"
+  #"src/lib/geogram/basic/logger.cpp"
+  "src/lib/geogram/basic/logger.h"
+  "src/lib/geogram/basic/matrix.h"
+  "src/lib/geogram/basic/memory.h"
+  "src/lib/geogram/basic/numeric.cpp"
+  "src/lib/geogram/basic/numeric.h"
+  "src/lib/geogram/basic/packed_arrays.cpp"
+  "src/lib/geogram/basic/packed_arrays.h"
+  "src/lib/geogram/basic/permutation.h"
+  #"src/lib/geogram/basic/process.cpp"
+  "src/lib/geogram/basic/process.h"
+  #"src/lib/geogram/basic/process_private.h"
+  #"src/lib/geogram/basic/process_unix.cpp"
+  #"src/lib/geogram/basic/process_win.cpp"
+  "src/lib/geogram/basic/progress.cpp"
+  "src/lib/geogram/basic/progress.h"
+  "src/lib/geogram/basic/psm.h"
+  "src/lib/geogram/basic/quaternion.cpp"
+  "src/lib/geogram/basic/quaternion.h"
+  "src/lib/geogram/basic/ntopimpl.cpp"
+  "src/lib/geogram/basic/smart_pointer.h"
+  "src/lib/geogram/basic/stopwatch.cpp"
+  "src/lib/geogram/basic/stopwatch.h"
+  "src/lib/geogram/basic/string.cpp"
+  "src/lib/geogram/basic/string.h"
+  "src/lib/geogram/basic/thread_sync.h"
+  "src/lib/geogram/basic/vecg.h"
+  "src/lib/geogram/delaunay/delaunay_nn.h"
+  "src/lib/geogram/delaunay/delaunay_tetgen.cpp"
+  "src/lib/geogram/delaunay/delaunay_tetgen.h"
+  "src/lib/geogram/delaunay/delaunay_triangle.cpp"
+  "src/lib/geogram/delaunay/delaunay_triangle.h"
+  "src/lib/geogram/delaunay/LFS.cpp"
+  "src/lib/geogram/delaunay/LFS.h"
+  "src/lib/geogram/delaunay/parallel_delaunay_3d.cpp"
+  "src/lib/geogram/delaunay/parallel_delaunay_3d.h"
+  "src/lib/geogram/delaunay/delaunay.cpp"
+  "src/lib/geogram/delaunay/delaunay.h"
+  "src/lib/geogram/delaunay/Delaunay.psm"
+  "src/lib/geogram/delaunay/delaunay_2d.cpp"
+  "src/lib/geogram/delaunay/delaunay_2d.h"
+  "src/lib/geogram/delaunay/delaunay_3d.cpp"
+  "src/lib/geogram/delaunay/delaunay_3d.h"
+  "src/lib/geogram/delaunay/delaunay_nn.cpp"
+  "src/lib/geogram/mesh/mesh_decimate.cpp"
+  "src/lib/geogram/mesh/mesh_decimate.h"
+  "src/lib/geogram/mesh/mesh_degree3_vertices.cpp"
+  "src/lib/geogram/mesh/mesh_degree3_vertices.h"
+  #"src/lib/geogram/mesh/mesh_distance.cpp"
+  #"src/lib/geogram/mesh/mesh_distance.h"
+  "src/lib/geogram/mesh/mesh_fill_holes.cpp"
+  "src/lib/geogram/mesh/mesh_fill_holes.h"
+  "src/lib/geogram/mesh/mesh_frame_field.cpp"
+  "src/lib/geogram/mesh/mesh_frame_field.h"
+  "src/lib/geogram/mesh/mesh_geometry.cpp"
+  "src/lib/geogram/mesh/mesh_geometry.h"
+  "src/lib/geogram/mesh/mesh_halfedges.cpp"
+  "src/lib/geogram/mesh/mesh_halfedges.h"
+  "src/lib/geogram/mesh/mesh_intersection.cpp"
+  "src/lib/geogram/mesh/mesh_intersection.h"
+  "src/lib/geogram/mesh/mesh_io.cpp"
+  "src/lib/geogram/mesh/mesh_io.h"
+  "src/lib/geogram/mesh/mesh_manifold_harmonics.cpp"
+  "src/lib/geogram/mesh/mesh_manifold_harmonics.h"
+  "src/lib/geogram/mesh/mesh_partition.cpp"
+  "src/lib/geogram/mesh/mesh_partition.h"
+  "src/lib/geogram/mesh/mesh_preprocessing.cpp"
+  "src/lib/geogram/mesh/mesh_preprocessing.h"
+  "src/lib/geogram/mesh/mesh_remesh.cpp"
+  "src/lib/geogram/mesh/mesh_remesh.h"
+  "src/lib/geogram/mesh/mesh_reorder.cpp"
+  "src/lib/geogram/mesh/mesh_reorder.h"
+  "src/lib/geogram/mesh/mesh_repair.cpp"
+  "src/lib/geogram/mesh/mesh_repair.h"
+  "src/lib/geogram/mesh/mesh_sampling.h"
+  "src/lib/geogram/mesh/mesh_smoothing.cpp"
+  "src/lib/geogram/mesh/mesh_smoothing.h"
+  "src/lib/geogram/mesh/mesh_subdivision.cpp"
+  "src/lib/geogram/mesh/mesh_subdivision.h"
+  "src/lib/geogram/mesh/mesh_tetrahedralize.cpp"
+  "src/lib/geogram/mesh/mesh_tetrahedralize.h"
+  "src/lib/geogram/mesh/mesh_topology.cpp"
+  "src/lib/geogram/mesh/mesh_topology.h"
+  "src/lib/geogram/mesh/triangle_intersection.cpp"
+  "src/lib/geogram/mesh/triangle_intersection.h"
+  "src/lib/geogram/mesh/index.h"
+  "src/lib/geogram/mesh/mesh.cpp"
+  "src/lib/geogram/mesh/mesh.h"
+  "src/lib/geogram/mesh/mesh_AABB.cpp"
+  "src/lib/geogram/mesh/mesh_AABB.h"
+  "src/lib/geogram/mesh/mesh_compare.cpp"
+  "src/lib/geogram/mesh/mesh_compare.h"
+  "src/lib/geogram/numerics/lbfgs_optimizers.h"
+  "src/lib/geogram/numerics/matrix_util.cpp"
+  "src/lib/geogram/numerics/matrix_util.h"
+  "src/lib/geogram/numerics/multi_precision.cpp"
+  #"src/lib/geogram/numerics/multi_precision.h"
+  #"src/lib/geogram/numerics/MultiPrecision.psm"
+  "src/lib/geogram/numerics/optimizer.cpp"
+  "src/lib/geogram/numerics/optimizer.h"
+  "src/lib/geogram/numerics/predicates.cpp"
+  "src/lib/geogram/numerics/predicates.h"
+  "src/lib/geogram/numerics/Predicates.psm"
+  "src/lib/geogram/numerics/expansion_nt.cpp"
+  "src/lib/geogram/numerics/expansion_nt.h"
+  "src/lib/geogram/numerics/lbfgs_optimizers.cpp"
+  #"src/lib/geogram/parameterization/mesh_param_validator.h"
+  #"src/lib/geogram/parameterization/mesh_PGP_2d.cpp"
+  #"src/lib/geogram/parameterization/mesh_PGP_2d.h"
+  #"src/lib/geogram/parameterization/mesh_segmentation.cpp"
+  #"src/lib/geogram/parameterization/mesh_segmentation.h"
+  #"src/lib/geogram/parameterization/mesh_ABF.cpp"
+  #"src/lib/geogram/parameterization/mesh_ABF.h"
+  #"src/lib/geogram/parameterization/mesh_atlas_maker.cpp"
+  #"src/lib/geogram/parameterization/mesh_atlas_maker.h"
+  #"src/lib/geogram/parameterization/mesh_global_param.cpp"
+  #"src/lib/geogram/parameterization/mesh_global_param.h"
+  #"src/lib/geogram/parameterization/mesh_LSCM.cpp"
+  #"src/lib/geogram/parameterization/mesh_LSCM.h"
+  #"src/lib/geogram/parameterization/mesh_param_packer.cpp"
+  #"src/lib/geogram/parameterization/mesh_param_packer.h"
+  #"src/lib/geogram/parameterization/mesh_param_validator.cpp"
+  "src/lib/geogram/points/nn_search.cpp"
+  "src/lib/geogram/points/nn_search.h"
+  #"src/lib/geogram/points/co3ne.cpp"
+  #"src/lib/geogram/points/co3ne.h"
+  "src/lib/geogram/points/colocate.cpp"
+  "src/lib/geogram/points/colocate.h"
+  "src/lib/geogram/points/kd_tree.cpp"
+  "src/lib/geogram/points/kd_tree.h"
+  "src/lib/geogram/voronoi/generic_RVD_utils.h"
+  "src/lib/geogram/voronoi/generic_RVD_vertex.h"
+  "src/lib/geogram/voronoi/integration_simplex.cpp"
+  "src/lib/geogram/voronoi/integration_simplex.h"
+  "src/lib/geogram/voronoi/RVD.cpp"
+  "src/lib/geogram/voronoi/RVD.h"
+  "src/lib/geogram/voronoi/RVD_callback.cpp"
+  "src/lib/geogram/voronoi/RVD_callback.h"
+  "src/lib/geogram/voronoi/RVD_mesh_builder.cpp"
+  "src/lib/geogram/voronoi/RVD_mesh_builder.h"
+  "src/lib/geogram/voronoi/CVT.cpp"
+  "src/lib/geogram/voronoi/CVT.h"
+  "src/lib/geogram/voronoi/generic_RVD.h"
+  "src/lib/geogram/voronoi/generic_RVD_cell.cpp"
+  "src/lib/geogram/voronoi/generic_RVD_cell.h"
+  "src/lib/geogram/voronoi/generic_RVD_polygon.cpp"
+  "src/lib/geogram/voronoi/generic_RVD_polygon.h"
+  #"src/lib/geogram/bibliography/embedded_references.cpp"
+  #"src/lib/geogram/bibliography/bibliography.cpp"
+  #"src/lib/geogram/bibliography/bibliography.h"
 )
 
-# This must always be last!
-include(CPack)
+set(VORPALINE_VERSION_MAJOR "1")
+set(VORPALINE_VERSION_MINOR "6")
+set(VORPALINE_VERSION_PATCH "3")
+set(VORPALINE_VERSION "1.6.3")
 
+set(VORPALINE_BUILD_NUMBER "1")
+set(VORPALINE_BUILD_DATE "1")
+set(VORPALINE_SVN_REVISION "1")
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lib/geogram/basic/version.h.in
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lib/geogram/version.h
+    @ONLY)
+
+source_group("" FILES ${sources})
+
+add_library(geogram STATIC ${sources})
+
+target_include_directories(geogram PUBLIC
+    src/lib)
+
+target_link_libraries(geogram PUBLIC zlibstatic)
+
+target_compile_features(geogram PUBLIC cxx_std_17)
+
+#target_compile_definitions(geogram PUBLIC)
