--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,9 @@ list(APPEND sources
   "src/lib/geogram/voronoi/generic_RVD_cell.h"
   "src/lib/geogram/voronoi/generic_RVD_polygon.cpp"
   "src/lib/geogram/voronoi/generic_RVD_polygon.h"
+	"src/lib/geogram/third_party/rply/rply.c"
+	"src/lib/geogram/third_party/rply/rply.h"
+	"src/lib/geogram/third_party/LM7/libmeshb7.c"
   #"src/lib/geogram/bibliography/embedded_references.cpp"
   #"src/lib/geogram/bibliography/bibliography.cpp"
   #"src/lib/geogram/bibliography/bibliography.h"
