Enable geogram::gfx for testing purposes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	set(VORPALINE_PLATFORM Darwin-clang-dynamic CACHE STRING "" FORCE)
 endif()
 
-option(GEOGRAM_WITH_GRAPHICS        "Viewers and geogram_gfx library"                                        OFF)
+option(GEOGRAM_WITH_GRAPHICS        "Viewers and geogram_gfx library"                                         ON)
 option(GEOGRAM_WITH_LEGACY_NUMERICS "Legacy numerical libraries"                                             OFF)
 option(GEOGRAM_WITH_HLBFGS          "Non-linear solver (Yang Liu's HLBFGS)"                                   ON)
 option(GEOGRAM_WITH_TETGEN          "Tetrahedral mesher (Hang Si's TetGen)"                                  OFF)
@@ -41,6 +41,7 @@ option(GEOGRAM_USE_SYSTEM_GLFW3     "Use the version of GLFW3 installed in the s
 
 include(GeogramMain.cmake)
 add_library(geogram::geogram ALIAS geogram)
+add_library(geogram::gfx ALIAS geogram_gfx)
 target_include_directories(geogram SYSTEM PUBLIC ${GEOGRAM_SOURCE_INCLUDE_DIR})
 
 ################################################################################
