--- a/src/examples/geogram/CMakeLists.txt
+++ b/src/examples/geogram/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(opennl_mesh_smooth)
 add_subdirectory(manifold_harmonics)
 add_subdirectory(opennl_basic_example)
 add_subdirectory(simple_raytrace)
+add_subdirectory(boolean_operations)
